--- a/.github/workflows/update-index.yaml
+++ b/.github/workflows/update-index.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - name: 🔄 Update Helm Index
         run: |
-          helm repo index --url https://anlatana.github.io/helm-repo/ charts/
+          helm repo index --url https://anlatana.github.io/helmcharts/ charts/
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add index.yaml
