--- a/.github/workflows/update-index.yaml
+++ b/.github/workflows/update-index.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'charts/*.tgz'  # Läuft nur, wenn sich neue Charts im Ordner befinden
+      - '*.tgz'  # Läuft nur, wenn sich neue Charts im Ordner befinden
       - '.github/**'
 
 permissions:
@@ -24,7 +24,7 @@ jobs:
 
       - name: 🔄 Update Helm Index
         run: |
-          helm repo index --url https://anlatana.github.io/helmcharts/ charts/
+          helm repo index --url https://anlatana.github.io/helmcharts/ .
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
